# CFS

./: .gitattributes  .gitignore  CMakeLists.txt  Design Document_ Master Cultivation & Skills.md  Design Document_ Master Events & Encounters.md  Design Document_ Master Resource & Asset Database.md  Design Document_ Master Weapon Database (Polearms & Blades).md  Design Document_ Narrative & Naming Engine.md  Design Document_ Playable & NPC Races.md  Game Design Document_ Player Experience & Living World.md  Game Design Document_ Relationship & Social Systems.md  Game Design Document_ Sect Mechanics & Hierarchy.md  Master Bestiary List.md  Master Design Document CF.md  SOP.md  Technical Design Document_ World Generation & Environment (v2.md  game.db  imgui.ini  parse_md.py  status.txt  tracked_files.txt
SaveData/: fullrun.json  longrun.json  smoke.json
SaveData/TestNPCs/: NPC_298091.json  NPC_315993.json  NPC_470075.json  NPC_705196.json  NPC_892066.json
SaveData/World_01/Sects/Blood Moon Courtyard/Members/: NPC_100487.json  NPC_105226.json  NPC_119317.json  NPC_149041.json  NPC_189145.json  NPC_198320.json  NPC_199774.json  NPC_229223.json  NPC_254917.json  NPC_291002.json  NPC_318267.json  NPC_326783.json  NPC_399349.json  NPC_414716.json  NPC_417796.json  NPC_430171.json  NPC_438938.json  NPC_444737.json  NPC_455597.json  NPC_492992.json  NPC_497189.json  NPC_498304.json  NPC_529625.json  NPC_536449.json  NPC_540261.json  NPC_586264.json  NPC_595527.json  NPC_619759.json  NPC_630775.json  NPC_641103.json  NPC_652253.json  NPC_653913.json  NPC_671695.json  NPC_679127.json  NPC_684349.json  NPC_686380.json  NPC_692169.json  NPC_713352.json  NPC_714148.json  NPC_744400.json  (+11 more)
SaveData/World_01/Sects/Scarlet Saber Hall/Members/: NPC_102360.json  NPC_104694.json  NPC_110918.json  NPC_131000.json  NPC_132885.json  NPC_151436.json  NPC_153192.json  NPC_172629.json  NPC_276432.json  NPC_277240.json  NPC_289991.json  NPC_299801.json  NPC_303869.json  NPC_337634.json  NPC_401467.json  NPC_407781.json  NPC_440734.json  NPC_445585.json  NPC_451979.json  NPC_499441.json  NPC_504661.json  NPC_524753.json  NPC_525689.json  NPC_533365.json  NPC_538665.json  NPC_544505.json  NPC_544803.json  NPC_602197.json  NPC_608624.json  NPC_669373.json  NPC_676718.json  NPC_688513.json  NPC_708420.json  NPC_722424.json  NPC_734280.json  NPC_738446.json  NPC_749515.json  NPC_759350.json  NPC_774121.json  NPC_811722.json  (+11 more)
SaveData/World_01/Sects/Spirit Phoenix Pavilion/Members/: NPC_112518.json  NPC_125700.json  NPC_161254.json  NPC_207971.json  NPC_210357.json  NPC_215897.json  NPC_226243.json  NPC_232125.json  NPC_251729.json  NPC_298143.json  NPC_315102.json  NPC_373954.json  NPC_397887.json  NPC_455294.json  NPC_483511.json  NPC_484998.json  NPC_512368.json  NPC_555165.json  NPC_580966.json  NPC_591324.json  NPC_616254.json  NPC_619246.json  NPC_621800.json  NPC_627446.json  NPC_635930.json  NPC_667360.json  NPC_686646.json  NPC_688531.json  NPC_745636.json  NPC_749697.json  NPC_767816.json  NPC_793590.json  NPC_812895.json  NPC_818880.json  NPC_829840.json  NPC_835768.json  NPC_838317.json  NPC_839803.json  NPC_851028.json  NPC_872351.json  (+11 more)
SaveData/World_01/Sects/Spirit Sword Palace/Members/: NPC_121334.json  NPC_129422.json  NPC_130301.json  NPC_165165.json  NPC_167941.json  NPC_190663.json  NPC_199384.json  NPC_210872.json  NPC_249791.json  NPC_270416.json  NPC_298025.json  NPC_311680.json  NPC_315391.json  NPC_358406.json  NPC_365835.json  NPC_371590.json  NPC_381087.json  NPC_394522.json  NPC_394639.json  NPC_398433.json  NPC_427155.json  NPC_437932.json  NPC_443142.json  NPC_485110.json  NPC_503535.json  NPC_515281.json  NPC_530155.json  NPC_545461.json  NPC_563257.json  NPC_621283.json  NPC_635980.json  NPC_670439.json  NPC_685475.json  NPC_732226.json  NPC_738264.json  NPC_751375.json  NPC_752708.json  NPC_758322.json  NPC_759961.json  NPC_762738.json  (+11 more)
SaveData/World_01/Sects/Violet Ocean Tower/Members/: NPC_109553.json  NPC_209309.json  NPC_211897.json  NPC_215326.json  NPC_222975.json  NPC_233668.json  NPC_254363.json  NPC_271845.json  NPC_275622.json  NPC_285711.json  NPC_297048.json  NPC_299040.json  NPC_299673.json  NPC_301325.json  NPC_303036.json  NPC_304614.json  NPC_305431.json  NPC_316396.json  NPC_342125.json  NPC_399005.json  NPC_402437.json  NPC_413996.json  NPC_415782.json  NPC_434417.json  NPC_436611.json  NPC_479186.json  NPC_486142.json  NPC_497314.json  NPC_499798.json  NPC_530203.json  NPC_538099.json  NPC_551766.json  NPC_580988.json  NPC_613995.json  NPC_657063.json  NPC_659502.json  NPC_685403.json  NPC_735207.json  NPC_749441.json  NPC_777259.json  (+11 more)
include/: Body.h  Combat.h  Components.h  Database.h  ECS.h  Entity.h  EventManager.h  GameData.h  GameDataLoader.h  GameMap.h  HistoryGenerator.h  NPC.h  NPCGenerator.h  NamingGenerator.h  Sect.h  SimEngine.h  Skills.h  WorldGen.h  WorldMap.h
src/: Body.cpp  Combat.cpp  Database.cpp  EventManager.cpp  GameData.cpp  GameDataLoader.cpp  GameMap.cpp  HistoryGenerator.cpp  Main.cpp  MainGui.cpp  Main_ImGui_Backup.cpp.bak  NPCGenerator.cpp  SimEngine.cpp  WorldGen.cpp  WorldMap.cpp
